--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Radu Varga
 author: Radu Varga
 email: varga.radu.antonio@gmail.com
 description: Musician
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://vargaradu.github.io/vargaradu.com/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
