--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Radu Varga
 author: Radu Varga
 email: varga.radu.antonio@gmail.com
 description: Musician
-baseurl: "https://vargaradu.github.io/vargaradu.com/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://vargaradu.github.io/vargaradu.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
 facebook_username: radu.a.varga
