--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: Radu Varga
 author: Radu Varga
-email: varga.radu.antonio@gmail.com
+email: contact@raduvarga.com
 description: Musician
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vargaradu.github.io/vargaradu.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
@@ -30,13 +30,14 @@ facebook_username: radu.a.varga
 instagram_username: antonioraduvarga
 youtube_channel: UC4yvQZ-P2tKyllgnp0Mf5sQ
 github_username:  vargaradu
+soundcloud_username: antonio-radu-varga
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
 
-include: ['_pages']
+include: ['_pages', '_collaborations', '_instruments']
 
 # Exclude from processing.
 # The following items will not be processed, by default.
