mobile menu update

--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,9 +1,9 @@
 items:
 
 - name: Siti Naturaleza
-  img: /assets/img/siti.jpg
+  img: /assets/img/collaborations/siti.jpg
   href: /collaborations/siti-naturaleza
   
 - name: Yevgenij Shifrin
-  img: /assets/img/yevgenij.jpg
+  img: /assets/img/collaborations/yevgenij.jpg
   href: /collaborations/yevgenij-shifrin
