changed color scheme

--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -7,3 +7,7 @@ items:
 - name: Yevgenij Shifrin
   img: /assets/img/collaborations/yevgenij.jpg
   href: /collaborations/yevgenij-shifrin
+
+- name: The Anté Dote
+  img: /assets/img/collaborations/ante.jpg
+  href: /collaborations/the-ante-dote
