--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author: Radu Varga
 email: contact@raduvarga.com
 description: Musician
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://vargaradu.github.io/vargaradu.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.raduvarga.com/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
 facebook_username: radu.a.varga
