--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ instagram_username: antonioraduvarga
 youtube_channel: raduvarga
 github_username:  raduvarga
 soundcloud_username: raduvarga
+bandcamp_username: raduvarga
 
 # Build settings
 theme: minima
