--- a/_data/instruments.yml
+++ b/_data/instruments.yml
@@ -15,6 +15,6 @@ items:
 - name: Finger Drumming
   img: /assets/img/instruments/maschine.jpg
 
-- name: Keys
+- name: Keys & Looping
   img: /assets/img/instruments/akai.jpg
 
