--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,10 +1,11 @@
 items:
 
-- src: L0Zu6H43bO4
-- src: VtoP1EtA45g
-- src: 2NLxce5bBBY
-- src: nsYJ-KgMkd4
-- src: ToQkkbYSKEs
-- src: IcIRh4Svig4
-- src: yb4X1FyE5FQ
-- src: y888CsndGuI
+- fb: 3038717646158266
+- yt: L0Zu6H43bO4
+- yt: VtoP1EtA45g
+- yt: 2NLxce5bBBY
+- yt: nsYJ-KgMkd4
+- yt: ToQkkbYSKEs
+- yt: IcIRh4Svig4
+- yt: yb4X1FyE5FQ
+- yt: y888CsndGuI
