--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,5 +1,9 @@
 items:
 
+- name: Henrik Baumgarten
+  img: /assets/img/collaborations/henrik.jpg
+  href: /collaborations/henrik-baumgarten
+
 - name: Siti Naturaleza
   img: /assets/img/collaborations/siti.jpg
   href: /collaborations/siti-naturaleza
