--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -4,7 +4,7 @@ items:
   venue: Nebenan
   city: Leipzig
   country: DE
-  href: https://www.facebook.com/events/
+  href: https://www.facebook.com/events/202467147666098
 
 - date: "2019-10-21"
   venue: LOFFT
