--- a/_data/software.yml
+++ b/_data/software.yml
@@ -1,7 +1,7 @@
 items:
 
 - name: UA Midi Control
-  img: /assets/img/software/ua-screenshot-dark.png
+  img: /assets/img/software/ua-youtube.jpg
   href: /software/ua-midi-control
 
 - name: Max for Live
