--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,5 +1,9 @@
 items:
 
+- name: Apo Yildiz
+  img: /assets/img/collaborations/apo.jpg
+  href: /collaborations/apo-yildiz
+
 - name: Henrik Baumgarten
   img: /assets/img/collaborations/henrik.jpg
   href: /collaborations/henrik-baumgarten
