--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,9 @@ plugins:
 
 include: ['_pages', '_collaborations', '_instruments', '_software']
 
+collections:
+  - fundraisers
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
