--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -24,6 +24,9 @@ items:
 - title: Collaborations
   url: /collaborations
 
+# - title: Sheet Music
+#   url: /sheet-music
+
 - title: Software
   url: /software
 
