--- a/_data/scores.yml
+++ b/_data/scores.yml
@@ -1,5 +1,10 @@
 items:
 
+- artist: Radu Varga
+  title: Rêverie
+  tags: Electronic
+  uri: reverie
+
 - artist: Taraf de Haïdouks
   title: Rustem
   tags: Traditional Romanian
