--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,19 +1,34 @@
 items:
 
 - yt: 7hdzFyl5SbY
+  title: Kele Kele | Guitar & Duduk
 - yt: a2sJPvACG48
+  title: Ben Giderim Batuma | Sala Fest
 - yt: JB3kmsEZe3U
+  title: Sareri Hovin Mernem | Duduk & Guitar
 - yt: 8ZUBibEOqCs
+  title: Mention Award (Arrangement) - 4th Microtonal Guitar Competition
 - yt: JwEKpQYzcPA
+  title: Rêverie | Radu Varga & Henrik Baumgarten
 - yt: rKiXjThLFiI
+  title: Waterfall | Microtonal Guitar & Ney
 - yt: EqxPu-gaVeE
+  title: Rustemul de la Întorsura | Romanian Caval & Persian Santur
 # - yt: cnmpMdW3Emw
-- fb: 3038717646158266
+# - fb: 3038717646158266
 - yt: L0Zu6H43bO4
+  title: Misirlou / Μισιρλού / مصر‎ | Romanian Caval
 - yt: VtoP1EtA45g
+  title: Impro Sessions - Episode 4 (Clara Zetkin)
 - yt: 2NLxce5bBBY
+  title: Impro Sessions - Episode 3 (Treehouse)
 - yt: nsYJ-KgMkd4
+  title: Impro Sessions - Episode 2 (Annalinde)
 - yt: ToQkkbYSKEs
+  title: Impro Sessions - Episode 1 (Sachsenbrücke)
 - yt: IcIRh4Svig4
+  title: Hear I Jah (New Zion Trio)
 - yt: yb4X1FyE5FQ
+  title: From Gargarin's point of view (e.s.t)
 - yt: y888CsndGuI
+  title: out of me//josef ka and// germany spring 2017
