--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,7 @@
 items:
 
+- yt: HjWSfTo1Q-s
+  title: Jocul Dianca | Caval & Kamancheh
 - yt: 7hdzFyl5SbY
   title: Kele Kele | Guitar & Duduk
 - yt: a2sJPvACG48
