--- a/_data/software.yml
+++ b/_data/software.yml
@@ -1,9 +1,13 @@
 items:
 
 - name: UA Midi Control
-  img: /assets/img/software/ua-youtube.jpg
+  img: /assets/img/software/ua/ua-youtube.jpg
   href: /software/ua-midi-control
 
+- name: Focusrite Midi Control
+  img: /assets/img/software/focusrite/focusrite-screenshot-desktop.png
+  href: /software/focusrite-midi-control
+
 - name: Max for Live
-  img: /assets/img/software/max-for-live.png
+  img: /assets/img/software/max/max-for-live.png
   href: /software/max-for-live
