reduced images filesize

--- a/_data/software.yml
+++ b/_data/software.yml
@@ -5,7 +5,7 @@ items:
   href: /software/ua-midi-control
 
 - name: Focusrite Midi Control
-  img: /assets/img/software/focusrite/focusrite-screenshot-desktop.png
+  img: /assets/img/software/focusrite/focusrite-screenshot-desktop.jpg
   href: /software/focusrite-midi-control
 
 - name: Max for Live
