--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,5 +1,9 @@
 items:
 
+- name: Ali Pirabi
+  img: /assets/img/collaborations/ali.jpg
+  href: /collaborations/ali-pirabi
+
 - name: Apo Yildiz
   img: /assets/img/collaborations/apo.jpg
   href: /collaborations/apo-yildiz
