--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,7 @@
 items:
 
+- yt: ToeMjhTsWS8
+  title: Khazan - Parviz Meshkatian | خزان - پرویز مشکاتیان
 - yt: HjWSfTo1Q-s
   title: Jocul Dianca | Caval & Kamancheh
 - yt: 7hdzFyl5SbY
