--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,16 @@
 items:
 
+
+- date: "2021-08-0"7
+  venue: Palatul Culturii
+  city: Călugăreni
+  country: RO
+
+- date: "2021-08-06"
+  venue: Palatul Culturii
+  city: Târgu Mureș
+  country: RO
+
 - date: "2021-06-23"
   venue: Őriszentpéter
   city: Őriszentpéter
