--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,9 +1,12 @@
 items:
 
-
 - name: Feras & Noma
   img: /assets/img/collaborations/feras-noma.jpg
   href: /collaborations/feras-noma
+
+- name: Tayfun Guttstadt
+  img: /assets/img/collaborations/tayfun.jpeg
+  href: /collaborations/tayfun-guttstadt
 
 - name: Ali Pirabi
   img: /assets/img/collaborations/ali.jpg
