--- a/_data/scores.yml
+++ b/_data/scores.yml
@@ -20,6 +20,11 @@ items:
   tags: Turkish Ottoman
   uri: rast-devr-i-revan
 
+- artist: Göksel Baktagir
+  title: Sevda
+  tags: Turkish
+  uri: sevda
+
 - artist: Rahim AlHaj
   title: Waterfall
   tags: Arabic
