--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,8 +1,8 @@
 items:
 
-- name: Feras & Noma
+- name: Sazende
   img: /assets/img/collaborations/feras-noma.jpg
-  href: /collaborations/feras-noma
+  href: /collaborations/sazende
 
 - name: Tayfun Guttstadt
   img: /assets/img/collaborations/tayfun.jpeg
