--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,13 @@
 items:
 
+
+- date: "2022-06-23"
+  project: w/ Mohamad Zatari Trio
+  venue: Lolo
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/441960403961250
+
 - date: "2022-05-22"
   project: Sazende
   venue: Expirat
