--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,7 @@
 items:
 
+- yt: -Atiuycc0WI
+  title: Şedd-i Arabân Peşrev - Refik Fersan
 - yt: tlV_iTmEZWE
   title: Aman Doktor | Microtonal Guitar, Ney, Bendir, Live Looping
 - yt: sr5pBuAUsVc
@@ -17,7 +19,7 @@ items:
 - yt: JB3kmsEZe3U
   title: Sareri Hovin Mernem | Duduk & Guitar
 - yt: 8ZUBibEOqCs
-  title: Mention Award (Arrangement) - 4th Microtonal Guitar Competition
+  title: Uşşak Saz Semaisi -Tayfun Guttstadt & Radu Varga
 - yt: JwEKpQYzcPA
   title: Rêverie | Radu Varga & Henrik Baumgarten
 - yt: rKiXjThLFiI
