--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,18 @@
 items:
 
+- date: "2022-10-02"
+  project: w/ Cosmo
+  venue: Străzi deschise @ Biserica Krețulescu
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/290886209772667/290886273105994/
+
+- date: "2022-09-11"
+  project: Oriental Session
+  venue: Balkanik @ Grădina Uranus
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/455062529818599
 
 - date: "2022-06-23"
   project: w/ Mohamad Zatari Trio
