--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -1,8 +1,8 @@
 items:
 
-- name: Cosmo
-  img: /assets/img/collaborations/radu-cosmo-poster.jpg
-  href: /collaborations/cosmo
+- name: Oriental Session
+  img: /assets/img/collaborations/oriental-session.jpg
+  href: /collaborations/oriental-session
 
 - name: Sazende
   img: /assets/img/collaborations/sazende.jpg
