--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,7 +1,26 @@
 items:
 
+- date: "2022-12-06"
+  project: Oriental Session
+  venue: Mandaloun
+  city: București
+  country: RO
+
+- date: "2022-10-06"
+  project: Oriental Session
+  venue: Pe Baricade
+  city: București
+  country: RO
+
 - date: "2022-10-02"
-  project: w/ Cosmo
+  project: Oriental Session
+  venue: Străzi deschise @ Biserica Krețulescu
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/290886209772667/290886273105994/
+
+- date: "2022-10-02"
+  project: Oriental Session
   venue: Străzi deschise @ Biserica Krețulescu
   city: București
   country: RO
