--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,13 @@
 items:
 
+
+- date: "2022-10-02"
+  project: w/ Ligia Keșișan & Sara Eslami
+  venue: Londohome
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/683006956871154
+
 - date: "2022-12-06"
   project: Oriental Session
   venue: Mandaloun
