--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,11 @@
 items:
 
+- date: "2023-01-17"
+  project: 
+  venue: Cetatea Medievală
+  city: Târgu Mureș
+  country: RO
+  href: https://www.facebook.com/events/1347316736017418/
 
 - date: "2022-12-17"
   project: w/ Ligia Keșișan & Sara Eslami
