--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -6,6 +6,8 @@ items:
   title: Şedd-i Arabân Peşrev - Refik Fersan
 - yt: tlV_iTmEZWE
   title: Oriental Session - Aman Doktor | Microtonal Guitar, Ney, Bendir, Live Looping
+- yt: EeXp96RbA4g
+  title: Nihavend Peșrev - Petraki | Santur
 - yt: sr5pBuAUsVc
   title: Çeçen kızı - Tanbûrî Cemil Bey
 - yt: lGevt3ddewo 
