--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,7 +1,11 @@
 items:
 
-- yt: 8n7npua8Yhk
-  title: Oriental Session - Urfa Divani | Santur, Accordion & Darbuka
+- yt: V0Dqv-JpoY4
+  title: Poezie și muzică persană | Santur & Tar
+- yt: 7xZPFR69TNE
+  title: Hüseyni Saz Semâî (Lavtaci Andon) | Santur
+- yt: lG6r_eI5b98
+  title: Hicaz Mandira | Santur
 - yt: -Atiuycc0WI
   title: Şedd-i Arabân Peşrev - Refik Fersan
 - yt: tlV_iTmEZWE
