--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,12 @@
 items:
 
+- date: "2023-01-21"
+  project: 
+  venue: IKWE yoga studio
+  city: Cluj Napoca
+  country: RO
+  href: https://www.facebook.com/events/5751308264953729
+
 - date: "2023-01-17"
   project: 
   venue: Cetatea Medievală
