--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,12 @@
 items:
 
+- date: "2023-02-25"
+  project: w/ Vika Medviedieva
+  venue: Londohome
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/731640798361692
+
 - date: "2023-02-05"
   project: Oriental Session
   venue: Londohome
