--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,9 +1,11 @@
 items:
 
+- yt: _VyZZEQgK5w
+  title: Kürdi Saz Semai (Saklı Bahçe) | Santur & Guitar
 - yt: V0Dqv-JpoY4
   title: Poezie și muzică persană | Santur & Tar
-- yt: 7xZPFR69TNE
-  title: Hüseyni Saz Semâî (Lavtaci Andon) | Santur
+# - yt: 7xZPFR69TNE
+#   title: Hüseyni Saz Semâî (Lavtaci Andon) | Santur
 - yt: lG6r_eI5b98
   title: Hicaz Mandira | Santur
 - yt: -Atiuycc0WI
