--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,7 @@
 items:
 
+- yt: a5Rux0dlNKk
+  title: Vika Medviedieva & Radu Varga | Contemporary Dance & Oriental Instruments | Performance
 - yt: _VyZZEQgK5w
   title: Kürdi Saz Semai (Saklı Bahçe) | Santur & Guitar
 - yt: V0Dqv-JpoY4
