--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,9 +1,9 @@
 items:
 
-- date: "2023-03-30"
-  project:
-  venue: TBA
-  city: Târgu Mureș
+- date: "2023-04-20"
+  project: Persian Poetry & Music
+  venue: AM Social Space
+  city: București
   country: RO
   href: 
 
@@ -16,7 +16,7 @@ items:
 
 - date: "2023-02-25"
   project: w/ Vika Medviedieva
-  venue: Londohome
+  venue: AM Social Space
   city: București
   country: RO
   href: https://www.facebook.com/events/731640798361692
