--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -5,7 +5,7 @@ items:
   venue: AM Social Space
   city: București
   country: RO
-  href: 
+  href: https://www.facebook.com/events/757044966050623
 
 - date: "2023-03-15"
   project:
