--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -8,7 +8,7 @@ items:
   href: https://www.facebook.com/events/757044966050623
 
 - date: "2023-04-20"
-  project: Seară de muzică crecească
+  project: Seară de muzică grecească
   venue: Londohome
   city: București
   country: RO
