--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,12 @@
 items:
 
+- date: "2023-04-23"
+  project: w/ Mohammad Hadi Mogeoi
+  venue: Bucharest Street Food Festival
+  city: București
+  country: RO
+  href: https://www.facebook.com/events/3345734412311051/
+
 - date: "2023-04-21"
   project: Persian Poetry & Music
   venue: AM Social Space
