--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,7 @@
 items:
 
+- yt: dRqZwlrQYI0
+  title: Funkylvania - Vanilla Sky
 - yt: a5Rux0dlNKk
   title: Vika Medviedieva & Radu Varga | Contemporary Dance & Oriental Instruments | Performance
 - yt: _VyZZEQgK5w
