--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,5 +1,26 @@
 items:
 
+- date: "2023-07-04"
+  project: Persian music w/ Mohammad Hadi Mogeoi
+  venue: K53 Cafe
+  city: București
+  country: RO
+  href:
+
+- date: "2023-07-04"
+  project: w/ Maria Bălănean
+  venue: 
+  city: București
+  country: RO
+  href:
+
+- date: "2023-06-23"
+  project: Persian music w/ Mohammad Hadi Mogeoi & Cosmo
+  venue: Arthub
+  city: București
+  country: RO
+  href:
+
 - date: "2023-05-19"
   project: Solo Santur
   venue: Via
